<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MedLi</string>
    <string name="action_settings">Settings</string>
    <string name="clear_btn_label">Clear</string>
    <string name="submit_btn_label">Submit</string>
    <string name="delete_button">Delete</string>
    <string name="submit">Submit</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="d_c">D/C</string>
    <string name="med_name_label">Medication Name</string>
    <string name="dose_label">Medication Dose per unit ie. 10 mg</string>
    <string name="dose_hint">Numeric value</string>
    <string name="measure_hint">Measure unit</string>
    <string name="med_name_hint">Generic or Brandname</string>
    <string name="medtype_label">Will this medication be taken Routinely, or As Needed(PRN)?</string>
    <string name="plus_button_label">+</string>
    <string name="minus_button_label">-</string>
    <string name="admin_times_label">Maximum Doses per Day</string>
    <string name="zero">0</string>
    <string name="earliest_dose_prn">Earliest dose: </string>

    <string name="prn_freq_hint">Hours between doses</string>
    <string name="prn_freq_label">Enter how often to give dose</string>
    <string name="med_dose_dialog_title">Confirm Medication Choices</string>
    <string name="plus_label">+</string>

    <!-- Activity_MedLiLight -->
    <string name="log_button_text">Logs</string>
    <!-- END Activity_MedLiLight -->

    <!-- Fragment_Home -->
    <string name="late_image_desc">late_image</string>
    <string name="do_not_show">Do not show this message again </string>
    <string name="home_welcome_info">With MedLi you can log multiple medications at a time. Just select as many as you would like then press submit and the records will be stored locally on your device. The records will then be available via the med history screen</string>
    <string name="home_welcome_info_2">You can also edit a medication by long pressing the pencil for each medication</string>
    <string name="home_welcome_info_3">Enjoy!</string>

    <!-- END Fragment_Home -->

    <!-- Fragment_MedSettings -->
    <string name="dose_form_label">Dose Form ie. 1 tab or 2 drops</string>
    <string name="prn_form_hint">This will be displayed on home screen</string>

    <!-- END Fragment_MedSettings -->

    <!-- Fragment_History Strings -->

    <string name="flash_screen_title">There are no medication doses logged yet.</string>
    <string name="edit_med_admin_title">Edit medication Admin data</string>
    <string name="time_label">Logged Time: </string>
    <string name="edit_dose_label">Logged Dose: </string>
    <string name="submit_changes_button">Submit Changes</string>
    <string name="cancel_changes_button">Cancel</string>
    <string name="delete_admin_desc">del_button</string>
    <string name="edit_admin_desc">edit_button</string>

    <!-- END Fragment_History Strings -->

    <string-array name="med_type">
        <item>SELECT</item>
        <item>ROUTINE</item>
        <item>PRN</item>
    </string-array>

    <!-- Fragment_EmptyMedList Strings -->
    <string name="welcome">Welcome to MedLi</string>
    <string name="add_med_button_label">Add First Medication</string>

    <!-- END Fragment_EmptyMedList -->

    <string name="disclaimer">This application by no means acts as a medical device, nor does it provide or contribute to any form of medical treatment.
        The information and functions provided by this application, although well tested, are not guaranteed accurate nor are they guaranteed
        to be available. The purpose of MedLi is to help the user keep track of a prescribed regime, not by any means to replace, or ensure
        adherence to a medical professionals prescribed treatment. Furthermore if there are any questions or concerns about your
        prescribed treatment you should consult the prescribing physician.</string>

</resources>
