<?xml version="1.0" encoding="utf-8"?><!--
  Copyright 2011 Colin Maccannell
  SeizureView is distributed under the terms of the GNU General Public License
  Please see included LISCENSE file for details on the distribution/modification terms
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollview_wrapper"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/med_edit_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/med_type_label"
            android:layout_width="fill_parent"
            android:gravity="center"
            android:layout_height="0dip"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:text="@string/medtype_label"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Spinner
            android:id="@+id/med_type_spinner"
            android:layout_width="wrap_content"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:entries="@array/med_type" />

        <LinearLayout
            android:id="@+id/secondary_form_wrapper"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/med_name_label"
                android:layout_width="fill_parent"
                android:layout_height="0dip"
                android:layout_weight="1"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:text="@string/med_name_label"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <AutoCompleteTextView
                android:id="@+id/ac_Med_name"
                android:layout_width="fill_parent"
                android:layout_height="0dip"
                android:layout_weight="1"
                android:singleLine="true"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/med_dose_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dose_label"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/med_dose_input"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/dose_hint"
                    android:inputType="numberDecimal" />

                <EditText
                    android:id="@+id/med_measure_input"
                    android:inputType="text"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <TextView
                android:id="@+id/dose_form_title"
                android:layout_width="fill_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/dose_form_label"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/dose_form_input"
                android:inputType="text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/admin_times_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/admin_times_label"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <LinearLayout
                android:id="@+id/admin_count_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="10">

                <Button
                    android:id="@+id/minus_button"

                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:padding="10dp"
                    android:text="@string/minus_button_label" />

                <EditText
                    android:id="@+id/admin_count_edittext"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:longClickable="false"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/zero" />

                <Button
                    android:id="@+id/plus_button"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:padding="10dp"
                    android:text="@string/plus_button_label" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/prn_frequency_box"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/prn_frequency_label"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/prn_freq_label" />

                <EditText
                    android:id="@+id/prn_frequency_input"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prn_freq_hint"
                    android:inputType="number" />

            </LinearLayout>

            <!-- empty box gets populated for routine meds -->
            <LinearLayout
                android:id="@+id/admin_times_add_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            </LinearLayout>


            <LinearLayout
                android:id="@+id/btm_buttons_lay"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:gravity="bottom"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_add_med"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/save" />

                <Button
                    android:id="@+id/dc_med"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/d_c"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/del_med"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/delete_button"
                    android:visibility="gone" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>